cc_talk_codegen/tests/no_compile/enum-fails.stderr
error: expected `struct` got `enum`
 --> tests/no_compile/enum-fails.rs:4:1
  |
4 | pub enum SimplePollCommand {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
