cc_talk_codegen/tests/no_compile/enum-fails.rs
use cc_talk_codegen::command;

#[command]
pub enum SimplePollCommand {}

pub fn main() {}
